fixed section two overflow

--- a/style.css
+++ b/style.css
@@ -94,12 +94,11 @@ header{
   padding: 20px;
 }
 
-#sidebar_content div {
+#sidebar_content {
   margin-top: 10px;
   background-color: #ffd;
   padding: 20px;
   border-radius: 5px;
-  width: 100%;
 }
 
 
